Errors found, now prevented

--- a/Primark/Pages/Customers/Update.cshtml
+++ b/Primark/Pages/Customers/Update.cshtml
@@ -11,26 +11,26 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Customer.Id" />
+            <input type="hidden" asp-for="CusRec.Id" />
             <div class="form-group">
-                <label asp-for="Customer.CustomerID" class="control-label"></label>
-                <input asp-for="Customer.CustomerID" class="form-control" />
-                <span asp-validation-for="Customer.CustomerID" class="text-danger"></span>
+                <label asp-for="CusRec.CustomerID" class="control-label"></label>
+                <input asp-for="CusRec.CustomerID" class="form-control" />
+                <span asp-validation-for="CusRec.CustomerID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Customer.CustomerFirstName" class="control-label"></label>
-                <input asp-for="Customer.CustomerFirstName" class="form-control" />
-                <span asp-validation-for="Customer.CustomerFirstName" class="text-danger"></span>
+                <label asp-for="CusRec.CustomerFirstName" class="control-label"></label>
+                <input asp-for="CusRec.CustomerFirstName" class="form-control" />
+                <span asp-validation-for="CusRec.CustomerFirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Customer.CustomerLastName" class="control-label"></label>
-                <input asp-for="Customer.CustomerLastName" class="form-control" />
-                <span asp-validation-for="Customer.CustomerLastName" class="text-danger"></span>
+                <label asp-for="CusRec.CustomerLastName" class="control-label"></label>
+                <input asp-for="CusRec.CustomerLastName" class="form-control" />
+                <span asp-validation-for="CusRec.CustomerLastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Customer.CustomerEmail" class="control-label"></label>
-                <input asp-for="Customer.CustomerEmail" class="form-control" />
-                <span asp-validation-for="Customer.CustomerEmail" class="text-danger"></span>
+                <label asp-for="CusRec.CustomerEmail" class="control-label"></label>
+                <input asp-for="CusRec.CustomerEmail" class="form-control" />
+                <span asp-validation-for="CusRec.CustomerEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
