--- a/Primark/Pages/Customers/Create.cshtml
+++ b/Primark/Pages/Customers/Create.cshtml
@@ -17,7 +17,7 @@
             <br />
             <div>
                 <label class="control-label">Customer First Name</label>
-                <input type="text" asp-for="CusRec.CusomerFirstName" class="form-control" />
+                <input type="text" asp-for="CusRec.CustomerFirstName" class="form-control" />
             </div>
             <br />
             <div>
