Added working c# code

--- a/Primark/Pages/AdminPages/AdminIndex.cshtml
+++ b/Primark/Pages/AdminPages/AdminIndex.cshtml
@@ -20,7 +20,15 @@
     </div>
 
     <div class="col-sm-2">
-        <p><a asp-page="/LogoutPage/Logout">Logout</a></p>
+        <p><a asp-page="/UploadFile/Upload">Upload File</a></p>
+    </div>
+
+    <div class="col-sm-2">
+        <p><a asp-page="/ViewFile/View">View File</a></p>
+    </div>
+
+    <div class="col-sm-2">
+        <p><a asp-page="/Logout/Logout">Logout</a></p>
     </div>
 
 </div>
