--- a/Primark/Pages/Customers/Delete.cshtml
+++ b/Primark/Pages/Customers/Delete.cshtml
@@ -20,22 +20,34 @@
             @Html.DisplayFor(model => model.CustomerRec.CustomerID)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerRec.CustomerFirstName)
+            @Html.DisplayNameFor(model => model.CustomerRec.CustomerFName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CustomerRec.CustomerFirstName)
+            @Html.DisplayFor(model => model.CustomerRec.CustomerFName)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerRec.CustomerLastName)
+            @Html.DisplayNameFor(model => model.CustomerRec.CustomerLName)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CustomerRec.CustomerLastName)
+            @Html.DisplayFor(model => model.CustomerRec.CustomerLName)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.CustomerRec.CustomerEmail)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.CustomerRec.CustomerEmail)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerRec.CustomerAge)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CustomerRec.CustomerAge)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.CustomerRec.CustomerTelephone)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CustomerRec.CustomerTelephone)
         </dd>
     </dl>
 
