--- a/Primark/Pages/DeleteFile/Delete.cshtml
+++ b/Primark/Pages/DeleteFile/Delete.cshtml
@@ -12,7 +12,7 @@
     <dt class="col-sm-2">
         <img id="displayImg" src="~/Files/@Model.CusFileRec.FileName" alt="User Picture" style=" max-width:180px;" /><br>
 
-        Student Name : @Model.CusFileRec.CustomerName
+        Customer Name : @Model.CusFileRec.CustomerFirstName
 
     </dt>
 </dl>
