--- a/Primark/Pages/UserPages/UserIndex.cshtml
+++ b/Primark/Pages/UserPages/UserIndex.cshtml
@@ -4,7 +4,7 @@
 }
 
 
-<h1>User Main Page</h1>
+<h1>User Main</h1>
 <br />
 <h2> Welcome @Model.FirstName</h2>
 
@@ -16,7 +16,6 @@
     </div>
 
     <div class="col-sm-2">
-        <p><a asp-page="/LogoutPage/Logout">Logout</a></p>
+        <p><a asp-page="/Logout/Logout">Logout</a></p>
     </div>
-
 </div>
