--- a/Primark/Pages/Customers/Create.cshtml
+++ b/Primark/Pages/Customers/Create.cshtml
@@ -4,36 +4,48 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create A Customer </h1>
+<link href="../wwwroot/css/TextFile.css" rel="stylesheet" />
 
-<br />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div class="form-group">
-                <label class="control-label">Customer ID</label>
-                <input type="text" asp-for="CusRec.CustomerID" class="form-control" />
-            </div>
-            <br />
-            <div>
-                <label class="control-label">Customer First Name</label>
-                <input type="text" asp-for="CusRec.CustomerFirstName" class="form-control" />
-            </div>
-            <br />
-            <div>
-                <label class="control-label">Customer Last Name</label>
-                <input type="text" asp-for="CusRec.CustomerLastName" class="form-control" />
-            </div>
-            <br />
-            <div>
-                <label class="control-label">Customer Email</label>
-                <input type="text" asp-for="CusRec.CustomerEmail" class="form-control" />
-            </div>
-            <br />
-            <div>
-                <input type="submit" value="Create" class="btn btn-secondary" />
-            </div>
+    <h1>Create A Customer </h1>
+    <br />
+    <div class="row">
+        <div class="col-md-4">
+            <form method="post">
+                <div class="form-group">
+                    <label class="control-label">Customer ID</label>
+                    <input type="text" asp-for="CusRec.CustomerID" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <label class="control-label">Customer First Name</label>
+                    <input type="text" asp-for="CusRec.CustomerFName" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <label class="control-label">Customer Last Name</label>
+                    <input type="text" asp-for="CusRec.CustomerLName" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <label class="control-label">Customer Email</label>
+                    <input type="email" asp-for="CusRec.CustomerEmail" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <label class="control-label">Customer Age</label>
+                    <input type="number" asp-for="CusRec.CustomerAge" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <label class="control-label">Customer Telephone</label>
+                    <input type="text" asp-for="CusRec.CustomerTelephone" class="form-control" />
+                </div>
+                <br />
+                <div>
+                    <input type="submit" value="Create" class="btn btn-secondary" />
+                </div>
 
-        </form>
+            </form>
+        </div>
     </div>
-</div>
+
