--- a/Primark/Pages/ViewFile/View.cshtml
+++ b/Primark/Pages/ViewFile/View.cshtml
@@ -3,13 +3,14 @@
 @{
 }
 
-<h1>:: View Picture Page ::</h1>
+<h1>View Picture</h1>
 <br />
 <div class="col-md-10">
     <table class="table">
         <thead>
             <tr>
-                <th>Customer Name</th>
+                <th>Customer First Name</th>
+                <th>Customer Last Name</th>
                 <th>File Name</th>
                 <th>File</th>
                 <th>Action</th>
@@ -18,11 +19,12 @@
 
         @for (int i = 0; i < Model.FileRec.Count; i++)
         {
-<tr>
-    <td>@Model.FileRec[i].CustomerName</td>
-    <td>@Model.FileRec[i].FileName</td>
-    <td><img src="~/Files/@Model.FileRec[i].FileName" style=" max-width:80px;" /></td>
-    <td><a asp-page="/DeleteFile/Delete" asp-route-id="@Model.FileRec[i].Id">Delete</a></td>
-</tr>}
+    <tr>
+        <td>@Model.FileRec[i].CustomerFirstName</td>
+        <td>@Model.FileRec[i].CustomerLastName</td>
+        <td>@Model.FileRec[i].FileName</td>
+        <td><img src="~/Files/@Model.FileRec[i].FileName" style=" max-width:80px;" /></td>
+        <td><a asp-page="/DeleteFile/Delete" asp-route-id="@Model.FileRec[i].Id">Delete</a></td>
+    </tr>}
     </table>
 </div>
