Fixed Upload Images

--- a/Primark/Pages/Shared/_Layout.cshtml
+++ b/Primark/Pages/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Create">Create your Account</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Create">Create a Customer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/View">View your Account</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/View">View Customers</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Login/Login">Login</a>
