--- a/Primark/Pages/UserPages/UserIndex.cshtml
+++ b/Primark/Pages/UserPages/UserIndex.cshtml
@@ -16,6 +16,15 @@
     </div>
 
     <div class="col-sm-2">
+        <p><a asp-page="/UserPages/ViewFiles">View Shopping Items to Purchase</a></p>
+    </div>
+
+    <div class="col-sm-2">
+        <p><a asp-page="/UserPages/ViewPurchasedFiles">View Shopping Items in Cart</a></p>
+    </div>
+
+
+    <div class="col-sm-2">
         <p><a asp-page="/Logout/Logout">Logout</a></p>
     </div>
 </div>
