--- a/Primark/wwwroot/css/site.css
+++ b/Primark/wwwroot/css/site.css
@@ -69,3 +69,20 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+/*
+.container {
+    background-color: #ffffff;
+    border-bottom: 1px solid #f0f0f0;
+    padding: 5px 10px;
+}
+
+.form {
+    padding: 40px 170px;
+}
+
+.form-control {
+    margin-bottom: 0px;
+}
+
+    */
