Delete Page Updated

--- a/Primark/Pages/DeleteFile/Delete.cshtml
+++ b/Primark/Pages/DeleteFile/Delete.cshtml
@@ -3,9 +3,9 @@
 @{
 }
 
-<h1>Delete Page</h1>
+<h1>Delete Shopping Item</h1>
 
-<h3 style="color: red;">Are you sure want to delete the picture?</h3>
+<h3 style="color: red;">Are you sure want to delete this shopping item?</h3>
 
 <dl class="row">
 
